vlib/v/checker/tests/unknown_field.out
vlib/v/checker/tests/unknown_field.v:7:12: error: type `Test` has no field or method `sdd`
    5 | fn main() {
    6 |     t := Test{}
    7 |     println(t.sdd)
      |               ~~~
    8 | }
