vlib/v/checker/tests/unknown_field.vv
module main

struct Test {}

fn main() {
	t := Test{}
	println(t.sdd)
}
